1.3.7
- Refactor queue to unify enqueue and dequeue and make it lockless
- Improve text/x-shellscript detection
- Fix bug in fapolicyd-cli --ftype detection which was introduced in 1.3.6
- Add watched mount points to state report - important since they can change
 
1.3.6
- Increase the default subject cache size
- Move fapolicyd-rpm-loader to bin directory
- Suppress the subject cache eviction for scripts run by interpreters
- Fix decriptor leak in previous release - only leaks on rpminstall/delete
- Improve performance of filter code
- Drop 'device' keyword for subject part of a rule
- Add documentation to fapolicyd-filter.conf for better understanding
- Fix build flags for Debian to include libmd
- Add --test-filter to fapolicy-cli to help test filter rules
- Fix bug in the filter that was allowing unexpected files though the filter
- Drop 2 more kinds of files from the rpm filter: html and md

1.3.5
- Raise default value for db_max_size
- Increase buffer size for reading process groups
- Pid read buffer size is defined using define rather than const
- Allow override of mounts file
- Fix leak and problematic memory managament
- Fix creation of RUN_DIR because it breaks rpm verify
- Add Microsoft Windows PE MIME magic definition
- Microsoft Windows PE rules
- Optimize path allocation
- Revert change to report interval logic (#325)
- Ensure fagenrules handles incomplete lines
- Describe how to handle nss-user-lookup correctly
- Fix normal pattern handling
- Improve AVL test
- Install gawk in test workflows
- Cleanup and document filesystem code
- Add AGENTS.md
- Revert "Fix for rpmdb with SQLite3 backend"
- Fix rpmdb locking issues by loading via separate process
- Fix an infinite loop (#345)
- Use memfd instead of pipe (#346)
- fapolicyd-cli --check-path  doesn't exit
- Fix null argv when spawning fapolicyd-rpm-loader (#343)
- Fix some concurrency issues
- Update comments in lru_evict header
- Update fd_fgets code